fixed files for kubectl

--- a/111dashboard-client-service.yaml
+++ b/111dashboard-client-service.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: dashboard-client
@@ -9,5 +9,4 @@ spec:
   - protocol: TCP
     port: 3000
     targetPort: 3000
-  type: ClusterIP                                                       
-~                    
+  type: ClusterIP                    
