--- a/101mongo-service-service.yaml
+++ b/101mongo-service-service.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: mongo-service
@@ -7,7 +7,6 @@ spec:
     app: mongo-service
   ports:
   - protocol: TCP
-    port: 3000
-    targetPort: 3000
-  type: ClusterIP                                                       
-~                    
+    port: 27017
+    targetPort: 27017
+  type: ClusterIP                    
