--- a/113gateway-service.yaml
+++ b/113gateway-service.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: gateway
@@ -9,5 +9,4 @@ spec:
   - protocol: TCP
     port: 80
     targetPort: 80
-  type: ClusterIP                                                       
-~                    
+  type: LoadBalancer 
